great-idea/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* main container */
.container {
	width: 95%;
	margin: 0 auto;
}

/* flatten out the navigation onto one line */
.nav-item,
.nav-list-item {
	display: inline;
	color: #A0A0A0;
	transition: 0.7s color;
}

.nav-list-item:hover {
	color: black;
}

/* space nav list and logo out */
.nav-list {
	margin-left: 1rem;
	margin-right: 15rem;
}

/* style header nav */
.header-nav {
	margin-top: 1rem;
}

/* style nav-list-items */
.nav-list-item {
	margin-right: 6rem;
	font-size: 1.5rem;
}

/* style landing section */

.landing-section {
	margin: 3rem;
}

.section-container {
	margin: 0 auto;
	text-align: center;
}

.call-to-action {
	display: inline-block;
	width: 45%;
	margin-right: 9%;
	font-size: 7rem;
}

.computer-img {
	display: inline-block;
	width: 45%;
}

.tagline {
	margin-bottom: -2rem;
}

.cta-button {
	border: 2px solid black;
	background: white;
	color: black;
	font-size: 2rem;
	padding: 1rem;
	transition: 1.4s color, 0.7s background;
}

.cta-button:hover {
	border: 2px solid white;
	background: black;
	color: white;
}

/* style hr lines */
hr {
	border: 0.5px solid black;
	margin-top: 3rem;
	margin-bottom: 3rem;
}

/* style cards */
.card {
	display: inline-block;
	text-align: justify;
}

.card-body {
	max-width: 80%;
}

.card-2 {
	width: 45%;
	margin-right: 4%;
}

.card-3 {
	width: 30%;
	margin-right: 3%;
}
.card-3 .card-body {
	max-width: 85%;
}

/* make middle image bigger */
.middle-img {
	margin: 3rem auto;
	width: 100%;
}

/* style footer */
footer {
	margin-top: 5rem;
	margin-bottom: 10rem;
	text-align: center;
}

